# denim

./: Cargo.toml  README.md
src/: cargo.rs  main.rs  project.rs
src/project/: cargo.rs
templates/: bare.rs  cotton.rs
